<<<<<<<< HEAD:src/main/java/ar/edu/utn/frba/dds/donaciones/domain/Representante.java
package ar.edu.utn.frba.dds.donaciones.domain;
========
package ar.edu.utn.frba.dds.donantes;
>>>>>>>> temp:src/main/java/ar/edu/utn/frba/dds/donantes/Representante.java

public class Representante {
  private String nombre;
  private String apellido;
  private Integer dni;
  private String email;
}
