<<<<<<<< HEAD:src/main/java/ar/edu/utn/frba/dds/donaciones/domain/TipoJuridico.java
package ar.edu.utn.frba.dds.donaciones.domain;
========
package ar.edu.utn.frba.dds.donantes;
>>>>>>>> temp:src/main/java/ar/edu/utn/frba/dds/donantes/TipoJuridico.java

public enum TipoJuridico {
  GUBERNAMENTAL,
  ONG,
  EMPRESA,
  INSTITUCION
}
